# stockpyt

./: .gitignore  LICENSE.md  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
stockpyt/: __init__.py  __main__.py  cli.py  common.py  errors.py  ticker.py  tickers.py
stockpyt/views/: __init__.py  detailed.py  simple.py  view.py
tests/: test_yahoo_ticker.py  yahoo.json  yahoo2.json
