[metadata]
author = Joe Krywicki
author-email = joseph.krywicki@gmail.com
summary = A Stock-Python-Ticker
description = A simple stock ticker summary tool
long-description = file: README.md
long-description-content-type = text/markdown
url  = https://github.com/krywicki/stockpyt
requires-dist = setuptools
license_files = LICENSE.md
keywords =
    stock ticker
    stocks
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Office/Business :: Financial :: Investment


